# ceres

./: .gitignore  Cargo.toml  README.md  justfile  test.asm
ceres-asm/: Cargo.toml
ceres-asm/src/: lib.rs
ceres-sys/: Cargo.toml
ceres-sys/src/: lib.rs  memory.rs  registers.rs  video.rs
src/: cpu.rs  lib.rs  main.rs  memory.rs  registers.rs  video.rs
