[package]
name = "ceres"
version = "0.1.0"
authors = ["Izzy <me@izzabelle.dev>"]
edition = "2018"

[dependencies]
#offbrand = { git = "https://github.com/izzabelle/offbrand" }
offbrand = { path = "../offbrand" }
structopt = "0.3.14"
ceres-sys = { path = "ceres-sys" }

[workspace]
members = [
    "ceres-sys"
]